--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,9 +6,9 @@
         xmlns:local="clr-namespace:Crypto" 
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="MainWindow" Height="1024" Width="1440" Background="#04255E" WindowStartupLocation="CenterScreen">
+        Title="Crypto" Height="1024" Width="1440" Background="#04255E" WindowStartupLocation="CenterScreen">
 
-    <Grid Cursor="">
+    <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="0.6*"/>
             <ColumnDefinition Width="1*"/>
@@ -22,23 +22,18 @@
             <RowDefinition Height="0.5*"/>
         </Grid.RowDefinitions>
 
-        <Button x:Name="RegBtn" Grid.Row="0" Grid.Column="2" Foreground="White" Content="SigIn" Height="32" FontSize="14" FontWeight="SemiBold" 
+        <Button x:Name="SignBtn" Grid.Row="0" Grid.Column="2" Foreground="White" Content="SigIn" Height="32" FontSize="14" FontWeight="SemiBold" Click="SignBtn_Click"
                 Width="80" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Style="{DynamicResource MaterialDesignRaisedButton}" Cursor="Hand" CommandParameter="SigIn"/>
 
-        <Button x:Name="SignBtn" Grid.Row="0" Grid.Column="3" Foreground="White" Content="Registration" Height="32" FontSize="14" FontWeight="SemiBold"
+        <Button x:Name="RegBtn" Grid.Row="0" Grid.Column="3" Foreground="White" Content="Registration" Height="32" FontSize="14" FontWeight="SemiBold" Click="RegBtn_Click"
                 Width="110" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Style="{DynamicResource MaterialDesignRaisedButton}" Cursor="Hand" CommandParameter="Registration"/>
 
-        <Button x:Name="AccBtn" Visibility="Hidden" Grid.Row="0" Grid.Column="2" Content="Account" Foreground="White" Height="32" FontSize="14" FontWeight="SemiBold" Grid.ColumnSpan="2"
-                Width="110" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Style="{DynamicResource MaterialDesignRaisedButton}" Cursor="Hand" CommandParameter="Account"/>
+        <ComboBox Grid.Column="1" Width="300" HorizontalAlignment="Right" Background="#1a237e" IsEditable="True" Foreground="White"/>
 
         <StackPanel Orientation="Horizontal">
             <Image Source="Logo/Counterparty.png" Width="55" Margin="20 0 0 0"/>
             <TextBlock Text="Crypto" Foreground="White" FontSize="35" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="20 0 0 0"/>
         </StackPanel>
-
-        <ComboBox Grid.Column="1" Width="300" HorizontalAlignment="Right" Background="#1a237e" IsEditable="True" Foreground="White"/>
-
-        <ContentControl x:Name="ConContol" Grid.Row="1" Grid.Column="0" Grid.RowSpan="3" Grid.ColumnSpan="2"/>
 
         <DataGrid x:Name="GridCoins" Grid.Row="1" AutoGenerateColumns="False"  Grid.Column="0" Background="#3A4CA9" 
                   Grid.RowSpan="3" Margin="10 0 0 0" Foreground="#f2f2f2" IsReadOnly="True" GridLinesVisibility="None" SelectedItem="{Binding SetIconsCurrencies, Mode=TwoWay}">
@@ -68,7 +63,7 @@
                 <DataGrid.Columns>
                     <DataGridTextColumn Binding="{Binding rate,Mode=TwoWay}"/>
                 </DataGrid.Columns>
-                </DataGrid>
+            </DataGrid>
         </materialDesign:Card>
         <materialDesign:Card Background="#27378C" Foreground="White" FontSize="12" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="3" Margin="20 0 20 10">
             <TextBlock/>
@@ -76,5 +71,6 @@
         <materialDesign:Card Background="#27378C" Foreground="White" FontSize="12" Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="3" Margin="20 0 20 10">
             <TextBlock/>
         </materialDesign:Card>
+
     </Grid>
 </Window>
