--- a/View/Registration.xaml
+++ b/View/Registration.xaml
@@ -6,7 +6,7 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:local="clr-namespace:Crypto"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800" Cursor="">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="34*"/>
