--- a/View/Registration.xaml
+++ b/View/Registration.xaml
@@ -6,7 +6,7 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:local="clr-namespace:Crypto"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" Cursor="">
+             d:DesignHeight="1024" d:DesignWidth="1440" Cursor="">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="34*"/>
@@ -14,73 +14,87 @@
             <ColumnDefinition Width="615*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition Height="0.15*"/>
+            <RowDefinition Height="0.1*"/>
+            <RowDefinition Height="0.1*"/>
+            <RowDefinition Height="0.1*"/>
+            <RowDefinition Height="0.1*"/>
+            <RowDefinition Height="0.1*"/>
             <RowDefinition Height="0.25*"/>
-            <RowDefinition Height="0.1*"/>
-            <RowDefinition Height="0.1*"/>
-            <RowDefinition Height="0.1*"/>
-            <RowDefinition Height="0.1*"/>
-            <RowDefinition Height="0.1*"/>
-            <RowDefinition Height="0.3*"/>
         </Grid.RowDefinitions>
 
         <StackPanel Orientation="Horizontal" Grid.ColumnSpan="3" Margin="0,0,615,0">
-            <Image Source="Logo/Counterparty.png" Width="55" Margin="10 0 0 0"/>
-            <TextBlock Text="Crypto" Foreground="White" FontSize="30" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="10 0 0 0"/>
+            <Image Source="/Logo/Counterparty.png" Width="70" Margin="40 0 5 0"/>
+            <TextBlock Text="Crypto" Foreground="White" FontSize="40" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="10 0 0 0"/>
         </StackPanel>
 
-        <DataGrid Background="#3A4CA9" Foreground="White" FontSize="12" Grid.Row="1" Grid.Column="0" Margin="20 0 20 10" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Grid.ColumnSpan="2">
+        <DataGrid Background="#3A4CA9" Foreground="White" FontSize="16" Grid.Row="1" Margin="40 30 35 30" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Grid.ColumnSpan="2">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Name:" Width="200"/>
             </DataGrid.Columns>
         </DataGrid>
-        <materialDesign:Card Background="#3A4CA9" Foreground="White" FontSize="12" Grid.Column="2" Margin="20,103,20,10" Grid.RowSpan="2">
-            <TextBlock FontSize="12" Style="{DynamicResource MaterialDesignHeadline6TextBlock}">My First Material Design App</TextBlock>
+        <materialDesign:Card Grid.Row="1" Grid.Column="2" Background="#3A4CA9" Margin="20 0 30 15">
+            <Grid VerticalAlignment="Center" HorizontalAlignment="Center">
+                <TextBox x:Name="NameTB" BorderBrush="#27378C" FontSize="14" CaretBrush="White" Foreground="White" Width="1000" Height="60" Style="{DynamicResource MaterialDesignOutlinedTextBox}"/>
+            </Grid>
         </materialDesign:Card>
 
-        <DataGrid Background="#3A4CA9" Foreground="White" FontSize="12" Grid.Row="2" Grid.Column="0" Margin="20 0 20 10" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Grid.ColumnSpan="2">
+
+        <DataGrid Background="#3A4CA9" Foreground="White" FontSize="16" Grid.Row="2" Grid.Column="0" Margin="40 30 35 30" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Grid.ColumnSpan="2">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Surname:" Width="200"/>
             </DataGrid.Columns>
         </DataGrid>
-        <materialDesign:Card Background="#3A4CA9" Foreground="White" FontSize="12" Grid.Row="2" Grid.Column="2" Margin="20,0,20,10">
-            <TextBlock FontSize="12" Style="{DynamicResource MaterialDesignHeadline6TextBlock}">My First Material Design App</TextBlock>
+        <materialDesign:Card Background="#3A4CA9" Foreground="White" FontSize="12" Grid.Row="2" Grid.Column="2" Margin="20 0 30 15">
+            <Grid VerticalAlignment="Center" HorizontalAlignment="Center">
+                <TextBox x:Name="SurnameTB" BorderBrush="#27378C" FontSize="14" CaretBrush="White" Foreground="White" Width="1000" Height="60" Style="{DynamicResource MaterialDesignOutlinedTextBox}"/>
+            </Grid>
         </materialDesign:Card>
 
-        <DataGrid Background="#3A4CA9" Foreground="White" FontSize="12" Grid.Row="2" Grid.Column="0" Margin="20,41,20,10" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Grid.ColumnSpan="2" Grid.RowSpan="2">
+        <DataGrid Background="#3A4CA9" Foreground="White" FontSize="16" Grid.Row="3" Grid.Column="0" Margin="40 30 35 30" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Grid.ColumnSpan="2" >
             <DataGrid.Columns>
                 <DataGridTextColumn Header="E-mail:" Width="200"/>
             </DataGrid.Columns>
         </DataGrid>
-        <materialDesign:Card Background="#3A4CA9" Foreground="White" FontSize="12" Grid.Row="2" Grid.Column="2" Margin="20,41,20,10" Grid.RowSpan="2">
-            <TextBlock FontSize="12" Style="{DynamicResource MaterialDesignHeadline6TextBlock}">My First Material Design App</TextBlock>
+        <materialDesign:Card Background="#3A4CA9" Foreground="White" FontSize="12" Grid.Row="3" Grid.Column="2" Margin="20 0 30 15">
+            <Grid VerticalAlignment="Center" HorizontalAlignment="Center">
+                <TextBox x:Name="EmailTB" BorderBrush="#27378C" FontSize="14" CaretBrush="White" Foreground="White" Width="1000" Height="60" Style="{DynamicResource MaterialDesignOutlinedTextBox}"/>
+            </Grid>
         </materialDesign:Card>
 
-        <DataGrid Background="#3A4CA9" Foreground="White" FontSize="12" Grid.Row="3" Grid.Column="0" Margin="20,41,20,10" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Grid.ColumnSpan="2" Grid.RowSpan="2">
+        <DataGrid Background="#3A4CA9" Foreground="White" FontSize="16" Grid.Row="4" Grid.Column="0" Margin="40 30 35 30" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Grid.ColumnSpan="2" >
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Password:" Width="200"/>
             </DataGrid.Columns>
         </DataGrid>
-        <materialDesign:Card Background="#3A4CA9" Foreground="White" FontSize="12" Grid.Row="3" Grid.Column="2" Margin="20,41,20,10" Grid.RowSpan="2">
-            <TextBlock FontSize="12" Style="{DynamicResource MaterialDesignHeadline6TextBlock}">My First Material Design App</TextBlock>
+        <materialDesign:Card Background="#3A4CA9" Foreground="White" FontSize="12" Grid.Row="4" Grid.Column="2" Margin="20 0 30 15">
+            <Grid VerticalAlignment="Center" HorizontalAlignment="Center">
+                <TextBox x:Name="PassTB" BorderBrush="#27378C" FontSize="14" CaretBrush="White" Foreground="White" Width="1000" Height="60" Style="{DynamicResource MaterialDesignOutlinedTextBox}"/>
+            </Grid>
         </materialDesign:Card>
 
-        <DataGrid Background="#3A4CA9" Foreground="White" FontSize="12" Grid.Row="5" Grid.Column="0" Margin="20 0 20 10" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Grid.ColumnSpan="2">
+        <DataGrid Background="#3A4CA9" Foreground="White" FontSize="16" Grid.Row="5" Grid.Column="0" Margin="40 30 35 30" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Grid.ColumnSpan="2">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Re-Password:" Width="200"/>
             </DataGrid.Columns>
         </DataGrid>
-        <materialDesign:Card Background="#3A4CA9" Foreground="White" FontSize="12" Grid.Row="5" Grid.Column="2" Margin="20,0,20,10">
-            <TextBlock FontSize="12" Style="{DynamicResource MaterialDesignHeadline6TextBlock}">My First Material Design App</TextBlock>
+        <materialDesign:Card Background="#3A4CA9" Foreground="White" FontSize="12" Grid.Row="5" Grid.Column="2" Margin="20 0 30 15">
+            <Grid VerticalAlignment="Center" HorizontalAlignment="Center">
+                <TextBox x:Name="RePassTB" BorderBrush="#27378C" FontSize="14" CaretBrush="White" Foreground="White" Width="1000" Height="60" Style="{DynamicResource MaterialDesignOutlinedTextBox}"/>
+            </Grid>
         </materialDesign:Card>
 
-        <Grid Grid.Row="5" Grid.Column="2" Margin="0,41,0,0" Grid.RowSpan="2">
+
+        <Grid Grid.Row="6" Grid.Column="2" >
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
 
-            <Button Grid.Column="0" Foreground="White" Content="Delete" FontSize="12" FontWeight="SemiBold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Style="{DynamicResource MaterialDesignRaisedButton}" Margin="40,30,40,62"/>
-            <Button Grid.Column="1" Foreground="White" Content="Save" FontSize="12" FontWeight="SemiBold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Style="{DynamicResource MaterialDesignRaisedButton}" Margin="40,30,40,62"/>
+            <Button x:Name="BackBtn" Grid.Column="0" Background="#27378C" Foreground="White" Content="←" FontSize="18" FontWeight="SemiBold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" 
+                    Style="{DynamicResource MaterialDesignFlatButton}" Margin="40,0,40,50" materialDesign:ButtonAssist.CornerRadius="10"/>
+            <Button x:Name="SaveBtn" Grid.Column="1" Background="#27378C" Foreground="White" Content="Save" FontSize="12" FontWeight="SemiBold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" 
+                    Style="{DynamicResource MaterialDesignFlatButton}" Margin="40,0,40,50"  materialDesign:ButtonAssist.CornerRadius="10"/>
         </Grid>
     </Grid>
 </UserControl>
