--- a/View/Sign.xaml
+++ b/View/Sign.xaml
@@ -21,7 +21,7 @@
         </Grid.RowDefinitions>
 
         <StackPanel Orientation="Horizontal" Grid.ColumnSpan="3" Margin="0,0,615,0">
-            <Image Source="Logo/Counterparty.png" Width="55" Margin="10 0 0 0"/>
+            <Image Source="/Logo/Counterparty.png" Width="55" Margin="10 0 0 0"/>
             <TextBlock Text="Crypto" Foreground="White" FontSize="30" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="10 0 0 0"/>
         </StackPanel>
 
