--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -64,7 +64,7 @@
         </DataGrid>
         <materialDesign:Card Background="#27378C"  FontSize="12" Grid.Row="1" Grid.Column="1" Margin="20 0 15 20">
             <StackPanel Width="300" Height="200">
-                <Image Source="{Binding Bitmap,Mode=TwoWay}" Stretch="Fill"/>
+                <Image Source="{Binding Url,Mode=TwoWay}" Stretch="Fill"/>
             </StackPanel>
         </materialDesign:Card>
         
